fix(api-docs): remove  property from Reserve endpoint documentation
