# challenge_foco/storage/api-docs/api-docs.json
@@ -402,12 +402,13 @@
                         "application/json": {
                             "schema": {
                                 "required": [
-                                    "name"
+                                    "hotel_id",
+                                    "room_id",
+                                    "check_in",
+                                    "check_out",
+                                    "total"
                                 ],
                                 "properties": {
-                                    "name": {
-                                        "type": "string"
-                                    },
                                     "hotel_id": {
                                         "description": "ID of associated hotel",
                                         "type": "integer"
